[package]
name = "valentine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bitflags = { version = "2", features = ["serde"] }
bytes = "1"
uuid = "1.8.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-raknet = { path = "../../../tokio-raknet"}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2 = "1"
anyhow = "1.0.100"

[features]
default = ["bedrock_1_21_130"]
bedrock_1_16_201 = []
bedrock_1_16_210 = ["bedrock_1_16_201"]
bedrock_1_16_220 = ["bedrock_1_16_201", "bedrock_1_16_210"]
bedrock_1_17_0 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220"]
bedrock_1_17_10 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0"]
bedrock_1_17_30 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10"]
bedrock_1_17_40 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30"]
bedrock_1_18_0 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40"]
bedrock_1_18_11 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0"]
bedrock_1_18_30 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11"]
bedrock_1_19_1 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30"]
bedrock_1_19_10 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1"]
bedrock_1_19_20 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10"]
bedrock_1_19_21 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20"]
bedrock_1_19_30 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20"]
bedrock_1_19_40 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30"]
bedrock_1_19_50 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40"]
bedrock_1_19_60 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50"]
bedrock_1_19_62 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60"]
bedrock_1_19_63 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60"]
bedrock_1_19_70 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62"]
bedrock_1_19_80 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70"]
bedrock_1_20_0 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80"]
bedrock_1_20_10 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0"]
bedrock_1_20_15 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0"]
bedrock_1_20_30 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10"]
bedrock_1_20_40 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30"]
bedrock_1_20_50 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40"]
bedrock_1_20_61 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50"]
bedrock_1_20_71 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_61"]
bedrock_1_20_80 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_61", "bedrock_1_20_71"]
bedrock_1_21_0 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_61", "bedrock_1_20_71", "bedrock_1_20_80"]
bedrock_1_21_100 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_71", "bedrock_1_20_80", "bedrock_1_21_0", "bedrock_1_21_20", "bedrock_1_21_30", "bedrock_1_21_42", "bedrock_1_21_50", "bedrock_1_21_60", "bedrock_1_21_70", "bedrock_1_21_80", "bedrock_1_21_90"]
bedrock_1_21_111 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_71", "bedrock_1_20_80", "bedrock_1_21_0", "bedrock_1_21_100", "bedrock_1_21_20", "bedrock_1_21_30", "bedrock_1_21_42", "bedrock_1_21_50", "bedrock_1_21_60", "bedrock_1_21_70", "bedrock_1_21_80", "bedrock_1_21_90"]
bedrock_1_21_120 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_71", "bedrock_1_20_80", "bedrock_1_21_0", "bedrock_1_21_100", "bedrock_1_21_111", "bedrock_1_21_20", "bedrock_1_21_30", "bedrock_1_21_42", "bedrock_1_21_50", "bedrock_1_21_60", "bedrock_1_21_70", "bedrock_1_21_80", "bedrock_1_21_90"]
bedrock_1_21_124 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_71", "bedrock_1_20_80", "bedrock_1_21_0", "bedrock_1_21_100", "bedrock_1_21_111", "bedrock_1_21_120", "bedrock_1_21_20", "bedrock_1_21_30", "bedrock_1_21_42", "bedrock_1_21_50", "bedrock_1_21_60", "bedrock_1_21_70", "bedrock_1_21_80", "bedrock_1_21_90"]
bedrock_1_21_130 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_71", "bedrock_1_20_80", "bedrock_1_21_0", "bedrock_1_21_100", "bedrock_1_21_111", "bedrock_1_21_120", "bedrock_1_21_20", "bedrock_1_21_30", "bedrock_1_21_42", "bedrock_1_21_50", "bedrock_1_21_60", "bedrock_1_21_70", "bedrock_1_21_80", "bedrock_1_21_90"]
bedrock_1_21_2 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_61", "bedrock_1_20_71", "bedrock_1_20_80", "bedrock_1_21_0"]
bedrock_1_21_20 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_61", "bedrock_1_20_71", "bedrock_1_20_80", "bedrock_1_21_0"]
bedrock_1_21_30 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_61", "bedrock_1_20_71", "bedrock_1_20_80", "bedrock_1_21_0", "bedrock_1_21_20"]
bedrock_1_21_42 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_17_40", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_61", "bedrock_1_20_71", "bedrock_1_20_80", "bedrock_1_21_0", "bedrock_1_21_20", "bedrock_1_21_30"]
bedrock_1_21_50 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_61", "bedrock_1_20_71", "bedrock_1_20_80", "bedrock_1_21_0", "bedrock_1_21_20", "bedrock_1_21_30", "bedrock_1_21_42"]
bedrock_1_21_60 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_61", "bedrock_1_20_71", "bedrock_1_20_80", "bedrock_1_21_0", "bedrock_1_21_20", "bedrock_1_21_30", "bedrock_1_21_42", "bedrock_1_21_50"]
bedrock_1_21_70 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_61", "bedrock_1_20_71", "bedrock_1_20_80", "bedrock_1_21_0", "bedrock_1_21_20", "bedrock_1_21_30", "bedrock_1_21_42", "bedrock_1_21_50", "bedrock_1_21_60"]
bedrock_1_21_80 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_71", "bedrock_1_20_80", "bedrock_1_21_0", "bedrock_1_21_20", "bedrock_1_21_30", "bedrock_1_21_42", "bedrock_1_21_50", "bedrock_1_21_60", "bedrock_1_21_70"]
bedrock_1_21_90 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_71", "bedrock_1_20_80", "bedrock_1_21_0", "bedrock_1_21_20", "bedrock_1_21_30", "bedrock_1_21_42", "bedrock_1_21_50", "bedrock_1_21_60", "bedrock_1_21_70", "bedrock_1_21_80"]
bedrock_1_21_93 = ["bedrock_1_16_201", "bedrock_1_16_210", "bedrock_1_16_220", "bedrock_1_17_0", "bedrock_1_17_10", "bedrock_1_17_30", "bedrock_1_18_0", "bedrock_1_18_11", "bedrock_1_18_30", "bedrock_1_19_1", "bedrock_1_19_10", "bedrock_1_19_20", "bedrock_1_19_30", "bedrock_1_19_40", "bedrock_1_19_50", "bedrock_1_19_60", "bedrock_1_19_62", "bedrock_1_19_70", "bedrock_1_19_80", "bedrock_1_20_0", "bedrock_1_20_10", "bedrock_1_20_30", "bedrock_1_20_40", "bedrock_1_20_50", "bedrock_1_20_71", "bedrock_1_20_80", "bedrock_1_21_0", "bedrock_1_21_20", "bedrock_1_21_30", "bedrock_1_21_42", "bedrock_1_21_50", "bedrock_1_21_60", "bedrock_1_21_70", "bedrock_1_21_80", "bedrock_1_21_90"]
