[package]
name = "valentine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bitflags = { version = "2", features = ["serde"] }
bytes = "1"
uuid = "1.8.0"
valentine_bedrock_core = { path = "bedrock_core" }
valentine_bedrock_1_21_130 = { path = "bedrock_versions/v1_21_130", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-raknet = { path = "../tokio-raknet"}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2 = "1"
anyhow = "1.0.100"

[features]
default = ["bedrock_1_21_130"]
bedrock_1_21_130 = ["dep:valentine_bedrock_1_21_130"]
