[package]
name = "valentine_gen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "valentine-gen"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
proc-macro2 = "1.0"
prettyplease = "0.2"
toml_edit = "0.22"
convert_case = "0.10.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
