[package]
name = "valentine_gen"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "valentine-gen"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
prettyplease.workspace = true
toml_edit.workspace = true
convert_case.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
